# lin_prog_vlsi

./: .gitignore  CMakeLists.txt  README.md  analyze_results.py  run-all-mcnc.sh  run-highs.sh  run-mosek.sh  run-plot.sh
examples/: small.json
include/floorplanner/: Annealer.h  Construction.h  DataModel.h  IO.h  LPFloorplanner.h  LPSolver.h  Placement.h  SequencePair.h
results/comparisons/: summary.csv  summary.md
src/: Annealer.cpp  Construction.cpp  DataModel.cpp  IO.cpp  LPFloorplanner.cpp  LPSolver.cpp  Placement.cpp  SequencePair.cpp  main.cpp
tests/: test_floorplanner.cpp
